# bugwarrior

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  CLAUDE.md  EXAMPLE_DIVERGENCE.toml  RELEASING.md  ghostty_hyperlink_guide.md  pyproject.toml  setup.py  tox.ini
.beads/: display-enhancements.md  issues.jsonl
.claude/agents/: bugwarrior-service-creator.md  legacy-modernizer.md
.github/workflows/: bugwarrior.yml  check.yml
bugwarrior/: README.rst  __init__.py  collect.py  command.py  console.py  db.py  notifications.py
bugwarrior/config/: __init__.py  data.py  ini2toml_plugin.py  load.py  schema.py  secrets.py
bugwarrior/docs/: common_configuration.rst  conf.py  contributing.rst  generate_service_template.py  getting.rst  other_services.rst
bugwarrior/docs/_ext/: config.py
bugwarrior/docs/other-services/: api.rst  tutorial.rst
bugwarrior/docs/services/: applereminders.rst  gerrit.rst  github.rst  linear.rst  logseq.rst  todoist.rst
bugwarrior/services/: __init__.py  activecollab.py  activecollab2.py  applereminders.py  azuredevops.py  bitbucket.py  bts.py  bz.py  deck.py  gerrit.py  gitbug.py  github.py  gitlab.py  gmail.py  jira.py  kanboard.py  linear.py  logseq.py  pagure.py  phab.py  pivotaltracker.py  redmine.py  taiga.py  teamlab.py  teamwork_projects.py  todoist.py  trac.py  trello.py  versionone.py  youtrack.py
tests/: base.py  test_applereminders.py  test_azuredevops.py  test_bitbucket.py  test_bts.py  test_bugzilla.py  test_command.py  test_db.py  test_deck.py  test_docs.py  test_general.py  test_gerrit.py  test_gitbug.py  test_github.py  test_gitlab.py  test_gmail.py  test_jira.py  test_kanboard.py  test_linear.py  test_logseq.py  test_phab.py  test_pivotaltracker.py  test_redmine.py  test_service.py  test_taiga.py  test_teamwork_projects.py  test_templates.py  test_todoist.py  test_trac.py  test_trello.py  test_youtrak.py
tests/config/: example-bugwarrior.toml  example-bugwarriorrc  test_data.py  test_load.py  test_schema.py  test_secrets.py
