[project]
name = "bugwarrior"
version = "2.0.0-alpha"
description = "Sync github, bitbucket, and trac issues with taskwarrior"
readme = "bugwarrior/README.rst"
# Needed for pydantic>1.8.
requires-python = ">=3.9,<4"
license = "GPL-3.0-or-later"
license-files = ["LICENSE.txt"]
keywords = ["task", "taskwarrior", "todo", "github"]
authors = [
  { name = "Ralph Bean", email = "ralph.bean@gmail.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Bug Tracking",
  "Topic :: Utilities",
]
dependencies = [
  "dogpile.cache>=0.5.3",
  "importlib-metadata>=4.13.0",
  "jinja2>=2.7.2",
  "lockfile>=0.9.1",
  "pydantic[email]>=2",
  "pydantic-settings>=2.0.0",
  "pyobjc-framework-eventkit>=11.1",
  "pytest>=8.4.1",
  "python-dateutil",
  "pytz",
  "requests",
  "responses>=0.25.7",
  "taskw-ng>=0.2.0",
  # Needed for backwards compatibility with python<=3.10.
  "tomli",
  # CLI framework (includes rich for progress indicators)
  "typer[all]>=0.9.0",
  # Provides distutils compatibility shim for Python 3.12+ (taskw uses distutils.version)
  "setuptools",
]

[project.optional-dependencies]
applereminders = ["pyobjc-framework-EventKit"]
bts = ["python-debianbts>=2.6.1"]
bugzilla = ["python-bugzilla>=2.0.0"]
gmail = ["google-api-python-client", "google-auth-oauthlib"]
ini2toml = ["ini2toml[full]"]
jira = ["jira>=0.22"]
kanboard = ["kanboard"]
keyring = ["keyring"]
phabricator = ["phabricator"]
test = [
   "docutils",
   "flake8",
   "pytest",
   "pytest-subtests",
   "pytest-xdist>=3.0.0",  # Parallel execution
   "responses",
   "sphinx>=1.0",
   "sphinx-click",
   "sphinx-inline-tabs",

   # Workaround https://github.com/python/importlib_metadata/issues/406
   "importlib-metadata<5",
]
trac = ["offtrac"]

all = ["bugwarrior[applereminders,bts,bugzilla,gmail,ini2toml,jira,kanboard,keyring,phabricator,test,trac]"]

[project.urls]
homepage = "https://github.com/ralphbean/bugwarrior"
documentation = "https://bugwarrior.readthedocs.io/en/stable/"
repository = "https://github.com/GothenburgBitFactory/bugwarrior"

[project.scripts]
bugwarrior = "bugwarrior:cli"
bugwarrior-pull = "bugwarrior:pull"
bugwarrior-vault = "bugwarrior:vault"
bugwarrior-uda = "bugwarrior:uda"

[project.entry-points."bugwarrior.service"]
applereminders = "bugwarrior.services.applereminders:AppleRemindersService"
azuredevops = "bugwarrior.services.azuredevops:AzureDevopsService"
deck = "bugwarrior.services.deck:NextcloudDeckService"
gitbug = "bugwarrior.services.gitbug:GitBugService"
github = "bugwarrior.services.github:GithubService"
gitlab = "bugwarrior.services.gitlab:GitlabService"
linear = "bugwarrior.services.linear:LinearService"
bitbucket = "bugwarrior.services.bitbucket:BitbucketService"
trac = "bugwarrior.services.trac:TracService"
bts = "bugwarrior.services.bts:BTSService"
bugzilla = "bugwarrior.services.bz:BugzillaService"
kanboard = "bugwarrior.services.kanboard:KanboardService"
redmine = "bugwarrior.services.redmine:RedMineService"
jira = "bugwarrior.services.jira:JiraService"
phabricator = "bugwarrior.services.phab:PhabricatorService"
pagure = "bugwarrior.services.pagure:PagureService"
taiga = "bugwarrior.services.taiga:TaigaService"
gerrit = "bugwarrior.services.gerrit:GerritService"
trello = "bugwarrior.services.trello:TrelloService"
youtrack = "bugwarrior.services.youtrack:YoutrackService"
gmail = "bugwarrior.services.gmail:GmailService"
teamwork_projects = "bugwarrior.services.teamwork_projects:TeamworkService"
pivotaltracker = "bugwarrior.services.pivotaltracker:PivotalTrackerService"
logseq = "bugwarrior.services.logseq:LogseqService"
todoist = "bugwarrior.services.todoist:TodoistService"

[project.entry-points."ini2toml.processing"]
bugwarrior = "bugwarrior.config.ini2toml_plugin:activate"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["ez_setup", "examples", "tests", "tests.*"]

[tool.uv.sources]
apple-reminders = { git = "https://github.com/luizribeiro/apple-reminders.git" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "bump-pydantic>=0.8.0",
]

[tool.pytest.ini_options]
minversion = "8.4"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Agent-friendly output and parallel execution
addopts = [
    "-v",                    # Verbose output for agents
    "--tb=short",           # Concise traceback format  
    "--strict-markers",     # Strict marker validation
    "--strict-config",      # Strict config validation
    "-n", "auto",           # Parallel execution with auto CPU detection
    "--dist=loadscope",     # Group by module/class for fixture efficiency
    "--maxprocesses=8",     # Limit max workers for stability
]

# Define test categories for selective execution
markers = [
    "unit: unit tests (fast, no external dependencies)",
    "integration: integration tests with external services", 
    "service: specific service tests (github, linear, etc)",
    "config: configuration validation tests",
    "migration: pydantic migration validation tests",
]

# Filter warnings for cleaner agent output
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.v1.*",
    "ignore::DeprecationWarning:pydantic.deprecated.*",
    "error::UserWarning",
]
